--- a/templates/cloud-init-user-data.yml.j2
+++ b/templates/cloud-init-user-data.yml.j2
@@ -9,7 +9,7 @@ autoinstall:
       eth0:
         dhcp4: false
         addresses:
-          - {{ ipv4_address }}/{{ ipv4_netmask_prefix }} }}
+          - {{ ipv4_address }}/{{ ipv4_netmask_prefix }}
         routes:
           - routes:
             - to: default
