--- a/templates/cloud-init-user-data.yml.j2
+++ b/templates/cloud-init-user-data.yml.j2
@@ -97,15 +97,15 @@ autoinstall:
       ### VG create
       - {name: ubuntu-vg, devices: [partition-2], preserve: false, type: lvm_volgroup, id: lvm_volgroup-0}
       ### LV /root
-      - {name: lv-root, volgroup: lvm_volgroup-0, size: 10G, wipe: superblock, type: lvm_partition, id: lvm_partition-0}
+      - {name: lv-root, volgroup: lvm_volgroup-0, size: {{ root_size }}, wipe: superblock, type: lvm_partition, id: lvm_partition-0}
       - {fstype: ext4, volume: lvm_partition-0, preserve: false, type: format, id: format-3}
       - {path: /, device: format-3, type: mount, id: mount-3}
       ### LV /home
-      - {name: lv-home, volgroup: lvm_volgroup-0, size: 5G, wipe: superblock, preserve: false, type: lvm_partition, id: lvm_partition-1}
+      - {name: lv-home, volgroup: lvm_volgroup-0, size: {{ home_size }}, wipe: superblock, preserve: false, type: lvm_partition, id: lvm_partition-1}
       - {fstype: ext4, volume: lvm_partition-1, preserve: false, type: format, id: format-4}
       - {path: /home, device: format-4, type: mount, id: mount-4}
       ### LV /var/log
-      - {name: lv-var, volgroup: lvm_volgroup-0, size: 3G, wipe: superblock, preserve: false, type: lvm_partition, id: lvm_partition-2}
+      - {name: lv-var, volgroup: lvm_volgroup-0, size: {{ var_log_size }}, wipe: superblock, preserve: false, type: lvm_partition, id: lvm_partition-2}
       - {fstype: ext4, volume: lvm_partition-2, preserve: false, type: format, id: format-5}
       - {path: /var/log, device: format-5, type: mount, id: mount-5}
 
