--- a/templates/cloud-init-user-data.yml.j2
+++ b/templates/cloud-init-user-data.yml.j2
@@ -93,7 +93,7 @@ autoinstall:
       - {fstype: ext4, volume: partition-1, preserve: false, type: format, id: format-1}
       - {path: /boot, device: format-1, type: mount, id: mount-1}
       ### Partition 3  133088411648
-      - {device: disk-sda, size: 50G, wipe: superblock, flag: '', number: 3, preserve: false, grub_device: false, type: partition, id: partition-2}
+      - {device: disk-sda, size: {{ disk_sda }}, wipe: superblock, flag: '', number: 3, preserve: false, grub_device: false, type: partition, id: partition-2}
       ### VG create
       - {name: ubuntu-vg, devices: [partition-2], preserve: false, type: lvm_volgroup, id: lvm_volgroup-0}
       ### LV /root
