--- a/templates/cloud-init-user-data.yml.j2
+++ b/templates/cloud-init-user-data.yml.j2
@@ -85,11 +85,11 @@ autoinstall:
       ### Device config
       - {ptable: gpt, path: /dev/sda, wipe: superblock, preserve: false, name: '', grub_device: false, type: disk, id: disk-sda}
       ### Partition 1  /dev/sda1 /boot/efi 1127219200
-      - {device: disk-sda, size: {{ dev_sda1 }}, wipe: superblock, flag: boot, number: 1, preserve: false, grub_device: true, type: partition, id: partition-0}
+      - {device: disk-sda, size: {{ boot_efi_size }}, wipe: superblock, flag: boot, number: 1, preserve: false, grub_device: true, type: partition, id: partition-0}
       - {fstype: fat32, volume: partition-0, preserve: false, type: format, id: format-0}
       - {path: /boot/efi, device: format-0, type: mount, id: mount-0}
       ### Partition 2 /dev/sda2 /boot 2147483648
-      - {device: disk-sda, size: {{ dev_sda2 }}, wipe: superblock, flag: '', number: 2, preserve: false, grub_device: false, type: partition, id: partition-1}
+      - {device: disk-sda, size: {{ boot_size }}, wipe: superblock, flag: '', number: 2, preserve: false, grub_device: false, type: partition, id: partition-1}
       - {fstype: ext4, volume: partition-1, preserve: false, type: format, id: format-1}
       - {path: /boot, device: format-1, type: mount, id: mount-1}
       ### Partition 3  133088411648
